--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ remote_theme: daviddarnes/alembic@main
 plugins:
 - jekyll-remote-theme
 
-title: Jeremy Howard
-description: Some basic examples of client interfaces to a computer vision API
+title: Chris Swart
+description: Some basic examples of client interfaces to a computer vision API based on Jeremy Howard's tinypets https://github.com/fastai/tinypets
 
 author:
-  name: Jeremy Howard
+  name: Chris Swart
